--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "version": "1.0",
   "permissions": [
     "bookmarks",
-    "commands"
+    "storage"
   ],
   "action": {
     "default_popup": "popup.html",
